# gigaprompt

./: .gitignore  MCP_SETUP.md  README.md  context_inject.py  dashboard.html  hook.sh  install.sh  mem  mem.bat  mem.py  mem.spec  mem_new.spec  memory_agent.py  pyproject.toml  requirements.txt  token_log.py
daemon/: launcher.py  super-memory.service
desktop_monitor/: __init__.py  app.py  requirements.txt  webview_app.py
desktop_monitor/static/: app.css  app.js
desktop_monitor/templates/: index.html  setup.html
src/: mcp_server.py
src/mem/: __init__.py  api.py  config.py  interactive.py  main.py  print_utils.py  tokens.py
src/mem/commands/: __init__.py  agent.py  daemon.py  file.py  memory.py  project.py  ui.py
tests/: test_memory_agent.py
